Just a compile-OK demo.

--- a/course/Makefile
+++ b/course/Makefile
@@ -6,7 +6,7 @@ FLAGS	= -O2 -D_FILE_OFFSET_BITS=64
 all :
 	$(MAKE) --directory=client
 	$(MAKE) --directory=tool
-	$(CC) $(FLAGS) -o run main.cpp client/*.o tool/*.o
+	$(CC) $(FLAGS) -o run main.cpp client/*.o tool/*.o -lpthread
 
 clean :
 	$(MAKE) --directory=client clean
